fixed issue with boxes being misaligned

--- a/src/react/src/components/headerbar/HeaderTaskbar.css
+++ b/src/react/src/components/headerbar/HeaderTaskbar.css
@@ -20,8 +20,12 @@
     background-color: #FCFCFB;
     border-radius: 10px;
     border-style: none;
+    margin-left:-20px;
 }
-
+.searchImg{
+    margin-top:-34px !important;
+    margin-right:10px;
+}
 .headerIcons {
     background-color: #FCFCFB;
     border-radius: 10px;
